CREATE TABLE "Doctors" (
  "doctor_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "phone" varchar,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "Patients" (
  "patient_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "dob" date,
  "gender" varchar,
  "doctor_id" int,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "Samples" (
  "sample_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "patient_id" int,
  "doctor_id" int,
  "status" varchar,
  "received_date" timestamp DEFAULT (now())
);

CREATE TABLE "Test_Results" (
  "result_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "sample_id" int UNIQUE,
  "result_details" text,
  "is_approved" boolean DEFAULT false,
  "approved_at" timestamp
);

CREATE TABLE "Audit_Logs" (
  "log_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "doctor_id" int,
  "attempted_sample_id" int,
  "action_details" text,
  "ip_address" varchar,
  "timestamp" timestamp DEFAULT (now())
);

COMMENT ON COLUMN "Doctors"."doctor_id" IS 'المعرف الفريد للطبيب';

COMMENT ON COLUMN "Doctors"."email" IS 'تستخدم كقناة آمنة لإرسال النتائج';

COMMENT ON COLUMN "Patients"."dob" IS 'تاريخ الميلاد';

COMMENT ON COLUMN "Patients"."doctor_id" IS 'الطبيب المسؤول عن المريض لضمان الخصوصية';

COMMENT ON TABLE "Samples" IS 'يتم عرض الـ Status فقط للطبيب بناء على صلاحياته';

COMMENT ON COLUMN "Samples"."doctor_id" IS 'ربط مباشر بالطبيب لتسهيل التحقق من الصلاحيات';

COMMENT ON COLUMN "Samples"."status" IS 'تأخذ قيم محددة: Registered, Under Analysis, Ready';

COMMENT ON COLUMN "Test_Results"."sample_id" IS 'علاقة واحد لواحد مع العينة';

COMMENT ON COLUMN "Test_Results"."result_details" IS 'تفاصيل النتيجة الطبية';

COMMENT ON COLUMN "Test_Results"."is_approved" IS 'لا تظهر النتيجة للطبيب إلا لو كانت True';

COMMENT ON COLUMN "Audit_Logs"."doctor_id" IS 'الطبيب الذي حاول الوصول غير المصرح';

COMMENT ON COLUMN "Audit_Logs"."attempted_sample_id" IS 'رقم العينة التي تم محاولة اختراقها';

COMMENT ON COLUMN "Audit_Logs"."action_details" IS 'تفصيل المحاولة الممنوعة';

ALTER TABLE "Patients" ADD FOREIGN KEY ("doctor_id") REFERENCES "Doctors" ("doctor_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Samples" ADD FOREIGN KEY ("patient_id") REFERENCES "Patients" ("patient_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Samples" ADD FOREIGN KEY ("doctor_id") REFERENCES "Doctors" ("doctor_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Test_Results" ADD FOREIGN KEY ("sample_id") REFERENCES "Samples" ("sample_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Audit_Logs" ADD FOREIGN KEY ("doctor_id") REFERENCES "Doctors" ("doctor_id") DEFERRABLE INITIALLY IMMEDIATE;
